--- a/example/example.html
+++ b/example/example.html
@@ -18,10 +18,16 @@
 Author: Filippo Mascoli - eldiabloz[at]gmail.com<br>
 <br>
 <br>
-Try to type the name of a city starting with "N"
+
 <br>
 <form>
+Try to type the name of a city starting with "N"<br>
 <input type="text" name="city" id="city">
+<br><br>
+Try to type the name of a country<br>
+<input type="text" name="country" id="country">
+<br><br>
+<input type="submit" value="Go">
 </form>
 
 </body>
